open localization: update handback repo

--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dependencies.3474ea685a3bc596334ccf520d669fcdfbc553dd.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dependencies.3474ea685a3bc596334ccf520d669fcdfbc553dd.ru-ru.xlf
@@ -2,28 +2,28 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ad36f5ff8c1d74f1dd6b82ff620f85833d4dfb3e</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">cef45d986eb9c4a84a03ee942c29a327c23cabf3</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dependencies.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a823d3c4ef60c59be97aa28c69f96ad42d7d248e</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">77a571b15a71635a6865aa111169ad91849e477a</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">44e819cc8e6c8f456b5d49afcbc312aeb0996e5a</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">19c02b54e780dce912e321d93502f5fe1c1899a8</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>Managing dependencies in .NET Core Preview 4 tooling | Microsoft Docs</source>
-          <target state="translated">Управление зависимостями в предварительной версии 4 инструментов .NET Core | Microsoft Docs</target>       </trans-unit>
+          <source>Managing dependencies in .NET Core tooling | Microsoft Docs</source>
+          <target state="translated">Управление зависимостями в средствах .NET Core | Документы Майкрософт</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>Preview 4 brings about changes to how dependencies are managed</source>
-          <target state="translated">В предварительной версии 4 изменены механизмы управления зависимостями.</target>       </trans-unit>
+          <source>Explains how to manage your dependencies with the .NET Core tools.</source>
+          <target state="translated">Сведения об управлении зависимостями с помощью средств .NET Core.</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
           <source>CLI, extensibility, custom commands, .NET Core</source>
           <target state="translated">CLI, расширяемость, пользовательские команды, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>Managing dependencies in .NET Core Preview 4 tooling</source>
-          <target state="translated">Управление зависимостями в предварительной версии 4 инструментов .NET Core</target>       </trans-unit>
+          <source>Managing dependencies in .NET Core RC4 tooling</source>
+          <target state="translated">Управление зависимостями в средствах версии-кандидата 4 .NETCore</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
           <source>With the move of .NET Core projects from project.json to csproj and MSBuild, a significant investment also happened that resulted in unification of the project file and assets that allow tracking of depenencies.</source>
           <target state="translated">Помимо переноса проектов .NET Core из файла project.json в CSPROJ-файл и на платформу MSBuild произошло еще одно значительное изменение, которое привело к унификации файла проекта и ресурсов, обеспечивающих отслеживание зависимостей.</target>       </trans-unit>
