--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-restore.6a19f43f84220f459123eca0f16c07516d880d41.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-restore.6a19f43f84220f459123eca0f16c07516d880d41.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b2dbd39583b58c5d977d88edfc4770f6d9855ec1</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">594956488dee39903feba44e10d6bb81801412a4</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-restore.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2e99fdf233e809a94a46e3221bb88b102d775509</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2f4f36ba5087f59f02d1e398929b8008365d2b8f</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b1f88d4cc92b9c0eed5f4704331a440bc5afe895</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7c7653fadd526082812c2583fdf6a17def9d7f3d</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-restore, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-restore, CLI, команда CLI, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-restore (Tooling Preview 4)</source>
-          <target state="translated">dotnet-restore (предварительная версия 4 инструментов)</target>       </trans-unit>
+          <source>dotnet-restore (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-restore (версия-кандидат 4 средств .NET Core)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">Эта статья применима к версии-кандидату 4 средств .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-restore<ept id="p1">](../../tools/dotnet-restore.md)</ept> topic.</source>
           <target state="translated">Версия этой статьи об инструментах .NET Core (предварительная версия 2): <bpt id="p1">[</bpt>dotnet-restore<ept id="p1">](../../tools/dotnet-restore.md)</ept>.</target>       </trans-unit>
