--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/extensibility.a6b11625791e2c09d915852be474526dc9487104.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/extensibility.a6b11625791e2c09d915852be474526dc9487104.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">48f06f0af3768f7129e0a2b3a89bbdc7795959dc</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">0a136e69e103994a69084b09f481489880d5df42</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\extensibility.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6da0eabec8c925ba8827103e5e2be4ed65535c79</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a6f160e1c3d4ab8e8aadf1c7b84fff5442447571</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">cb2d31549eb3c8ed2ca2c8913786e440a63c38ba</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f93d7cbc3a199e4c28789ec0201d8df942486c24</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 2).</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>.NET Core CLI extensibility model (Tooling Preview 4)<ept id="p1">](../preview3/tools/extensibility.md)</ept> topic.</source>
-          <target state="translated">Информацию об инструментах .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017 см. в статье <bpt id="p1">[</bpt>Модель расширяемости CLI в .NET Core (предварительная версия 4 инструментов)<ept id="p1">](../preview3/tools/extensibility.md)</ept>.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>.NET Core CLI extensibility model (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/extensibility.md)</ept> topic.</source>
+          <target state="translated">Сведения для версии-кандидата 4 средств .NET Core см. в разделе <bpt id="p1">[</bpt>Модель расширяемости CLI в .NET Core (версия-кандидат 4 средств .NET Core)<ept id="p1">](../preview3/tools/extensibility.md)</ept>.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Overview</source>
           <target state="translated">Обзор</target>       </trans-unit>
