--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/layering.d5959d31e867010572042cfd402c3e40afa72bac.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/layering.d5959d31e867010572042cfd402c3e40afa72bac.ru-ru.xlf
@@ -2,28 +2,28 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">261af1368f9966d8f485ab9ba252f15da31e05b2</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">305d046c698ca9f7ebb5ac56387cfef00145393e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\layering.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">01b6528b0db10cfeb5f021fa804defd805d58dcf</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7af36cc8dcb1608e61a134ae45e762b254a39789</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">82d8d7f230ca69b496d3d3ea0e1bd7f81395ae6d</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1d4fe1b39ca865269209218de945f037cf090095</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>.NET Core Command Line Tools Preview 4 Architecture | Microsoft Docs</source>
-          <target state="translated">Архитектура предварительной версии 4 программ командной строки .NET Core | Microsoft Docs</target>       </trans-unit>
+          <source>.NET Core Command Line Tools RC4 Architecture | Microsoft Docs</source>
+          <target state="translated">Архитектура версии-кандидата 4 программ командной строки .NET Core | Документы Майкрософт</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>Preview 4 brings about certain changes to the way the overall .NET Core tools are layered.</source>
-          <target state="translated">Предварительная версия 4 привносит некоторые изменения в общую архитектуру инструментов .NET Core.</target>       </trans-unit>
+          <source>RC4 brings about certain changes to the way the overall .NET Core tools are layered.</source>
+          <target state="translated">Версия-кандидат 4 привносит некоторые изменения в общую архитектуру средств .NET Core.</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
           <source>CLI, extensibility, custom commands, .NET Core</source>
           <target state="translated">CLI, расширяемость, пользовательские команды, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>High-level overview of changes in CLI Preview 4</source>
-          <target state="translated">Краткий обзор изменений в предварительной версии 4 программ с интерфейсом командной строки</target>       </trans-unit>
+          <source>High-level overview of changes in CLI RC4</source>
+          <target state="translated">Краткий обзор изменений в версии-кандидате 4 интерфейса командной строки</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
           <source>This document will describe in high-level the changes that moving from <ph id="ph1">`project.json`</ph> to MSBuild and <ph id="ph2">`csproj`</ph> project system bring.</source>
           <target state="translated">Здесь приведены общие сведения об изменениях, которые возникают при переходе с системы проектов <ph id="ph1">`project.json`</ph> на MSBuild и <ph id="ph2">`csproj`</ph>.</target>       </trans-unit>
@@ -37,11 +37,11 @@
           <source>Moving away from project.json</source>
           <target state="translated">Переход с использования project.json</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>The biggest change in the Preview 4 tooling for .NET Core is certainly the <bpt id="p1">[</bpt>move away from project.json to csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> as the project system.</source>
-          <target state="translated">Самое значительное изменение в инструментах .NET Core в предварительной версии 4 — конечно же, <bpt id="p1">[</bpt>использование CSPROJ-файла, а не project.json<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> в качестве системы проектов.</target>       </trans-unit>
+          <source>The biggest change in the RC4 tooling for .NET Core is certainly the <bpt id="p1">[</bpt>move away from project.json to csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> as the project system.</source>
+          <target state="translated">Самое значительное изменение в версии-кандидате 4 средств .NET Core — <bpt id="p1">[</bpt>переход от project.json к CSPROJ-файлу<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> в качестве системы проектов.</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
-          <source>Preview 4version of the command line tools is the first release of .NET Core command line tooling that does not contain any support for project.json.</source>
-          <target state="translated">В предварительной версии 4 программ командной строки .NET Core впервые не реализована поддержка project.json.</target>       </trans-unit>
+          <source>RC4version of the command line tools is the first release of .NET Core command line tooling that does not contain any support for project.json.</source>
+          <target state="translated">В версии-кандидате 4 программы командной строки .NET Core впервые не реализована поддержка project.json.</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
           <source>That means that it cannot be used to build, run or publish project.json based applications and libraries.</source>
           <target state="translated">Это означает, что эти средства нельзя использовать для сборки, выполнения или публикации приложений и библиотек на основе project.json.</target>       </trans-unit>
@@ -94,8 +94,8 @@
           <source>With the move to the new project system, the previous diagram changes:</source>
           <target state="translated">В связи с переходом на новую систему проектов предыдущая схема изменилась.</target>       </trans-unit>
         <trans-unit id="128" translate="yes" xml:space="preserve">
-          <source>Preview 4 tools high-level architecture</source>
-          <target state="translated">Обзор архитектуры предварительной версии 4 инструментов</target>       </trans-unit>
+          <source>RC4 tools high-level architecture</source>
+          <target state="translated">Высокоуровневая архитектура средств версии-кандидата 4</target>       </trans-unit>
         <trans-unit id="129" translate="yes" xml:space="preserve">
           <source>The main difference is that the CLI is not the foundational layer anymore; this role is now filled by the "shared SDK component".</source>
           <target state="translated">Основное различие заключается в том, что интерфейс командной строки больше не является основным уровнем. Теперь эту роль выполняет общий компонент SDK.</target>       </trans-unit>
@@ -124,8 +124,8 @@
           <source>Since these are MSBuild targets, you can also use raw MSBuild to execute them using the <bpt id="p1">[</bpt>dotnet msbuild<ept id="p1">](dotnet-msbuild.md)</ept> command.</source>
           <target state="translated">Так как это целевые объекты MSBuild, их можно выполнить с помощью команды <bpt id="p1">[</bpt>dotnet msbuild<ept id="p1">](dotnet-msbuild.md)</ept> в самом модуле MSBuild.</target>       </trans-unit>
         <trans-unit id="138" translate="yes" xml:space="preserve">
-          <source>Preview 4 CLI commands</source>
-          <target state="translated">Команды предварительной версии 4 интерфейса командной строки</target>       </trans-unit>
+          <source>RC4 CLI commands</source>
+          <target state="translated">Команды интерфейса командной строки в версии-кандидате 4</target>       </trans-unit>
         <trans-unit id="139" translate="yes" xml:space="preserve">
           <source>The shared SDK component means that the majority of existing CLI commands have been re-implemented as MSBuild tasks and targets.</source>
           <target state="translated">Введение общего компонента SDK означает, что большинство существующих команд интерфейса командной строки были заново реализованы как целевые объекты и задачи MSBuild.</target>       </trans-unit>
@@ -142,8 +142,8 @@
           <source>These commands still do what you expect them to do (new up a project, build it, publish it, pack it and so on).</source>
           <target state="translated">Эти команды по-прежнему выполняют ожидаемые функции (создание, сборка, публикация, упаковка проекта и т. д.).</target>       </trans-unit>
         <trans-unit id="144" translate="yes" xml:space="preserve">
-          <source>Majority of the options are not changed, and are still there, and you can consult either the commands' help screens (using <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) or Preview 4 documentation on this site to get familiar with any changes.</source>
-          <target state="translated">Большинство параметров не изменились и по-прежнему существуют. Чтобы ознакомиться с изменениями, можно обратиться к тексту справки по командам (при помощи <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) или документации по предварительной версии 4 на этом сайте.</target>       </trans-unit>
+          <source>Majority of the options are not changed, and are still there, and you can consult either the commands' help screens (using <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) or RC4 documentation on this site to get familiar with any changes.</source>
+          <target state="translated">Большинство параметров не изменились и по-прежнему существуют. Чтобы ознакомиться с изменениями, обратитесь к тексту справки по командам (при помощи <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) или документации по версии-кандидату 4 на этом сайте.</target>       </trans-unit>
         <trans-unit id="145" translate="yes" xml:space="preserve">
           <source>From an execution perspective, the CLI commands will take their parameters and construct a call to "raw" MSBuild that will set the needed properties and run the desired target.</source>
           <target state="translated">Команды интерфейса командной строки с точки зрения выполнения принимают параметры и отправляют вызов к самому модулю MSBuild, который задает необходимые свойства и запускает нужный целевой объект.</target>       </trans-unit>
@@ -163,10 +163,10 @@
           <source>Conclusion</source>
           <target state="translated">Заключение</target>       </trans-unit>
         <trans-unit id="151" translate="yes" xml:space="preserve">
-          <source>This document outlined at a high-level the changes that are happening to the overall CLI tooling architecture and functioning that are coming with Preview 4.</source>
-          <target state="translated">Здесь приведен обзор изменений в архитектуре предварительной версии 4 программ с интерфейсом командной строки и их работе,</target>       </trans-unit>
+          <source>This document outlined at a high-level the changes that are happening to the overall CLI tooling architecture and functioning that are coming with RC4.</source>
+          <target state="translated">Здесь приведен обзор изменений в архитектуре версии-кандидата 4 средств интерфейса командной строки и их работе,</target>       </trans-unit>
         <trans-unit id="152" translate="yes" xml:space="preserve">
-          <source>It has introduced the notion of the shared SDK component as well as explained how the CLI commands function, from a technical perspective, in Preview 4.</source>
+          <source>It has introduced the notion of the shared SDK component as well as explained how the CLI commands function, from a technical perspective, in RC4.</source>
           <target state="translated">а также рассмотрено понятие общего компонента SDK и функционирование команд интерфейса командной строки с технической точки зрения.</target>       </trans-unit>
       </group>
     </body>
