--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/using-ci-with-cli.aeb9bf03ecb439e411bf19a7b3b234950e477308.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/using-ci-with-cli.aeb9bf03ecb439e411bf19a7b3b234950e477308.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dc68271dcca6a64bbcbeb487050e809fae40c8aa</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">0363bdfcb75f51789393e1459d23fcb644c7fb11</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\using-ci-with-cli.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bb03867b0b1ccf6b2b2142a54f2695b28a7b7424</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ddd2fd49f5ac60a93505f32a84d3215c4e5c9408</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b9738b4d9609356ecb85ade5056096afff650770</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">0e2d7caf8de7700992d1bedd6fb002428d7861d5</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 2).</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>Using .NET Core SDK and tools in Continuous Integration (CI) (Tooling Preview 4)<ept id="p1">](../preview3/tools/using-ci-with-cli.md)</ept> topic.</source>
-          <target state="translated">Информацию об инструментах .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017 см. в статье <bpt id="p1">[</bpt>Использование пакета SDK и инструментов .NET Core при непрерывной интеграции (CI) (предварительная версия 4)<ept id="p1">](../preview3/tools/using-ci-with-cli.md)</ept>.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>Using .NET Core SDK and tools in Continuous Integration (CI) (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/using-ci-with-cli.md)</ept> topic.</source>
+          <target state="translated">Сведения о версии-кандидате 4 средств .NET Core см. в разделе <bpt id="p1">[</bpt>Использование пакета SDK и средств .NET Core при непрерывной интеграции (CI) (версия-кандидат 4 средств .NET Core)<ept id="p1">](../preview3/tools/using-ci-with-cli.md)</ept>.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Overview</source>
           <target state="translated">Обзор</target>       </trans-unit>
