--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-new.1c4e72c8a865272c8db60fcd510833b3cc8c3f2b.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-new.1c4e72c8a865272c8db60fcd510833b3cc8c3f2b.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">967ef46ba7c4125bee1727f35d38798ef73689e5</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a49fe94ca8f678c614fb7f58767693c73e34c737</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\dotnet-new.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4db2a1ce81b0aa85b35312cd064e564fd674947b</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e954a29b8cb857c8443610af9163a0499d47b0fc</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ebdf382459ff257048023f075188b923e9300c4f</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3f2df95eb68478717ef0bfe7f04424e2ce9f7e33</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 2).</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>dotnet-new (Tooling Preview 4)<ept id="p1">](../preview3/tools/dotnet-new.md)</ept> topic.</source>
-          <target state="translated">Информацию об инструментах .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017 см. в статье <bpt id="p1">[</bpt>dotnet-new (предварительная версия 4 инструментов)<ept id="p1">](../preview3/tools/dotnet-new.md)</ept>.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>dotnet-new (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/dotnet-new.md)</ept> topic.</source>
+          <target state="translated">Сведения для версии-кандидата 4 средств .NET Core см. в разделе <bpt id="p1">[</bpt>dotnet-new (версия-кандидат 4 средств .NET Core)<ept id="p1">](../preview3/tools/dotnet-new.md)</ept>.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Name</source>
           <target state="translated">Имя</target>       </trans-unit>
