--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-new.550175068e0117eda5c92441e0fcdb910097125b.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-new.550175068e0117eda5c92441e0fcdb910097125b.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d4ca76f3de38b5d05868292d5c4bb8e3b0c7fdf2</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f0c62647c5817db2057c60a7a95a62f08f7889a5</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-new.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">387adf765214dfa3b2fbe827bfbd62f6346c9fdd</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">33ab04767e9b59d18373121ce8014ecf71b9fb83</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5294b49b50de10e3f91f51920deea9eb0cc088e5</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9405a412a93e74394f2034c9cd1abbba59dbec8e</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-new, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-new, CLI, команда CLI, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-new (Tooling Preview 4)</source>
-          <target state="translated">dotnet-new (предварительная версия 4 инструментов)</target>       </trans-unit>
+          <source>dotnet-new (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-new (версия-кандидат 4 средств .NET Core)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">Эта статья применима к версии-кандидату 4 средств .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-new<ept id="p1">](../../tools/dotnet-new.md)</ept> topic.</source>
           <target state="translated">Версия этой статьи об инструментах .NET Core (предварительная версия 2): <bpt id="p1">[</bpt>dotnet-new<ept id="p1">](../../tools/dotnet-new.md)</ept>.</target>       </trans-unit>
@@ -34,8 +34,8 @@
           <source>Name</source>
           <target state="translated">Имя</target>       </trans-unit>
         <trans-unit id="108" translate="yes" xml:space="preserve">
-          <source>dotnet-new -- Creates a new .NET Core project in the current directory.</source>
-          <target state="translated">dotnet-new — создает проект на .NET Core в текущем каталоге.</target>       </trans-unit>
+          <source>dotnet-new - Creates a new .NET Core project in the current directory</source>
+          <target state="translated">dotnet-new — создает проект .NET Core в текущем каталоге</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
           <source>Synopsis</source>
           <target state="translated">Краткий обзор</target>       </trans-unit>
@@ -43,56 +43,122 @@
           <source>Description</source>
           <target state="translated">Описание</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>The <ph id="ph1">`dotnet new`</ph> command provides a convenient way to initialize a valid .NET Core project and sample source code to try out the Command Line Interface (CLI) toolset.</source>
-          <target state="translated">Команда <ph id="ph1">`dotnet new`</ph> предоставляет удобный способ инициализации проекта .NET Core, а также образец исходного кода, который позволяет испытать в работе набор средств интерфейса командной строки (CLI).</target>       </trans-unit>
+          <source>The <ph id="ph1">`dotnet new`</ph> command provides a convenient way to initialize a valid .NET Core project and sample source code to try out the Command-line interface (CLI) toolset.</source>
+          <target state="translated">Команда <ph id="ph1">`dotnet new`</ph> предоставляет удобный способ инициализации проекта .NET Core, а также образец исходного кода, который позволяет испытать в работе набор средств интерфейса командной строки.</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>This command is invoked in the context of a directory.</source>
           <target state="translated">Эта команда вызывается в контексте каталога.</target>       </trans-unit>
         <trans-unit id="113" translate="yes" xml:space="preserve">
-          <source>When invoked, the command will result in two main artifacts being dropped to the current directory:</source>
-          <target state="translated">Вызов команды приводит к записи двух основных объектов в текущем каталоге:</target>       </trans-unit>
+          <source>When invoked, the command will scaffold out the resources and files according to the template and options passed into the command.</source>
+          <target state="translated">При вызове команда сформирует шаблоны ресурсов и файлов в соответствии с шаблоном и параметрами, переданными в команду.</target>       </trans-unit>
         <trans-unit id="114" translate="yes" xml:space="preserve">
-          <source>A <ph id="ph1">`Program.cs`</ph> (or <ph id="ph2">`Program.fs`</ph>) file that contains a sample "Hello World" program.</source>
-          <target state="translated">файла <ph id="ph1">`Program.cs`</ph> (или <ph id="ph2">`Program.fs`</ph>), содержащего образец программы Hello World;</target>       </trans-unit>
-        <trans-unit id="115" translate="yes" xml:space="preserve">
-          <source>A valid csproj project file.</source>
-          <target state="translated">Допустимый файл проекта csproj.</target>       </trans-unit>
-        <trans-unit id="116" translate="yes" xml:space="preserve">
           <source>After this, the project is ready to be compiled and/or edited further.</source>
           <target state="translated">После этого проект готов к дальнейшей компиляции и изменению.</target>       </trans-unit>
+        <trans-unit id="115" translate="yes" xml:space="preserve">
+          <source>Arguments</source>
+          <target state="translated">Аргументы</target>       </trans-unit>
+        <trans-unit id="116" translate="yes" xml:space="preserve">
+          <source>template - The template to instansiate when the command is invoked.</source>
+          <target state="translated">template — шаблон, создающий экземпляры при вызове команды.</target>       </trans-unit>
         <trans-unit id="117" translate="yes" xml:space="preserve">
+          <source>The command contains a default list of templates; use <ph id="ph1">`dotnet new --help`</ph>.</source>
+          <target state="translated">Команда содержит список шаблонов по умолчанию. Используйте <ph id="ph1">`dotnet new --help`</ph>.</target>       </trans-unit>
+        <trans-unit id="118" translate="yes" xml:space="preserve">
           <source>Options</source>
           <target state="translated">Параметры</target>       </trans-unit>
-        <trans-unit id="118" translate="yes" xml:space="preserve">
-          <source>Prints out a short help for the command.</source>
-          <target state="translated">Выводит краткую справку по команде.</target>       </trans-unit>
         <trans-unit id="119" translate="yes" xml:space="preserve">
-          <source>Language of the project.</source>
-          <target state="translated">Язык проекта.</target>       </trans-unit>
+          <source>List templates containing the specified name.</source>
+          <target state="translated">Перечисляет шаблоны с указанным именем.</target>       </trans-unit>
         <trans-unit id="120" translate="yes" xml:space="preserve">
-          <source>Defaults to <ph id="ph1">`C#`</ph>.</source>
-          <target state="translated">По умолчанию — <ph id="ph1">`C#`</ph>.</target>       </trans-unit>
+          <source>Specifies the language of the template to create</source>
+          <target state="translated">Задает язык создаваемого шаблона</target>       </trans-unit>
         <trans-unit id="121" translate="yes" xml:space="preserve">
-          <source>Other valid values are <ph id="ph1">`csharp`</ph> and <ph id="ph2">`cs`</ph>.</source>
-          <target state="translated">Другие допустимые значения: <ph id="ph1">`csharp`</ph> и <ph id="ph2">`cs`</ph>.</target>       </trans-unit>
+          <source>The name for the output being created.</source>
+          <target state="translated">Имя создаваемых выходных данных.</target>       </trans-unit>
         <trans-unit id="122" translate="yes" xml:space="preserve">
-          <source>Type of the project.</source>
-          <target state="translated">Тип проекта.</target>       </trans-unit>
+          <source>If no name is specified, the name of the current directory is used.</source>
+          <target state="translated">Если имя не указано, используется имя текущего каталога.</target>       </trans-unit>
         <trans-unit id="123" translate="yes" xml:space="preserve">
-          <source>Valid values for C# are <ph id="ph1">`console`</ph>, <ph id="ph2">`web`</ph>, <ph id="ph3">`lib`</ph> and <ph id="ph4">`xunittest`</ph> and for F# only <ph id="ph5">`console`</ph> is valid.</source>
-          <target state="translated">Допустимые значения для C#: <ph id="ph1">`console`</ph>, <ph id="ph2">`web`</ph>, <ph id="ph3">`lib`</ph> и <ph id="ph4">`xunittest`</ph>; для F# допустимо только значение <ph id="ph5">`console`</ph>.</target>       </trans-unit>
+          <source>Location to place the generated output.</source>
+          <target state="translated">Расположение, в котором размещаются созданные выходные данные.</target>       </trans-unit>
         <trans-unit id="124" translate="yes" xml:space="preserve">
+          <source>Shows all templates for a specific type of project.</source>
+          <target state="translated">Показывает все шаблоны определенного типа проекта.</target>       </trans-unit>
+        <trans-unit id="125" translate="yes" xml:space="preserve">
+          <source>Prints out help for the command.</source>
+          <target state="translated">Распечатывает справку для команды.</target>       </trans-unit>
+        <trans-unit id="126" translate="yes" xml:space="preserve">
+          <source>Template options</source>
+          <target state="translated">Параметры шаблона</target>       </trans-unit>
+        <trans-unit id="127" translate="yes" xml:space="preserve">
+          <source>Each project template may have additional options available.</source>
+          <target state="translated">Каждый шаблон проекта может содержать дополнительные доступные параметры.</target>       </trans-unit>
+        <trans-unit id="128" translate="yes" xml:space="preserve">
+          <source>The core templates, for example, have the following.</source>
+          <target state="translated">Основные шаблоны, например, содержат следующее.</target>       </trans-unit>
+        <trans-unit id="129" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>console, xunit, mstest<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>console, xunit, mstest<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="130" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> — указывает целевую платформу.</target>       </trans-unit>
+        <trans-unit id="131" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">Значения: netcoreapp1.0 или netcoreapp1.1 (по умолчанию: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="132" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>web, webapi<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>web, webapi<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="133" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> — указывает целевую платформу.</target>       </trans-unit>
+        <trans-unit id="134" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">Значения: netcoreapp1.0 или netcoreapp1.1 (по умолчанию: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="135" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>mvc<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>mvc<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="136" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> — указывает целевую платформу.</target>       </trans-unit>
+        <trans-unit id="137" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">Значения: netcoreapp1.0 или netcoreapp1.1 (по умолчанию: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="138" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-au|--authentication`</ph> -  The type of authentication to use.</source>
+          <target state="translated"><ph id="ph1">`-au|--authentication`</ph> — тип проверки подлинности.</target>       </trans-unit>
+        <trans-unit id="139" translate="yes" xml:space="preserve">
+          <source>Values: None or Individual (Default: None)</source>
+          <target state="translated">Значения: None или Individual (по умолчанию: None)</target>       </trans-unit>
+        <trans-unit id="140" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-uld|--use-local-db`</ph> - Whether or not to use LocalDB instead of SQLite.</source>
+          <target state="translated"><ph id="ph1">`-uld|--use-local-db`</ph> — следует ли использовать LocalDB вместо SQLite.</target>       </trans-unit>
+        <trans-unit id="141" translate="yes" xml:space="preserve">
+          <source>Values: true or false (Default: false)</source>
+          <target state="translated">Значения: True или False (по умолчанию: False)</target>       </trans-unit>
+        <trans-unit id="142" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>classlib<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>classlib<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="143" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> — указывает целевую платформу.</target>       </trans-unit>
+        <trans-unit id="144" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0, netcoreapp1.1 and netstandard1.0 - 1.6 (Default: netstandard1.4).</source>
+          <target state="translated">Значения: netcoreapp1.0, netcoreapp1.1 и netstandard1.0–1.6 (по умолчанию: netstandard1.4).</target>       </trans-unit>
+        <trans-unit id="145" translate="yes" xml:space="preserve">
           <source>Examples</source>
           <target state="translated">Примеры</target>       </trans-unit>
-        <trans-unit id="125" translate="yes" xml:space="preserve">
-          <source>Create a C# console application project in the current directory:</source>
-          <target state="translated">Создание проекта консольного приложения C# в текущем каталоге:</target>       </trans-unit>
-        <trans-unit id="126" translate="yes" xml:space="preserve">
-          <source><ph id="ph1">`dotnet new`</ph> or <ph id="ph2">`dotnet new --lang c#`</ph></source>
-          <target state="translated"><ph id="ph1">`dotnet new`</ph> или <ph id="ph2">`dotnet new --lang c#`</ph></target>       </trans-unit>
-        <trans-unit id="127" translate="yes" xml:space="preserve">
-          <source>Create a new ASP.NET Core C# application project in the current directory:</source>
-          <target state="translated">Создание проекта приложения ASP.NET Core C# в текущем каталоге:</target>       </trans-unit>
+        <trans-unit id="146" translate="yes" xml:space="preserve">
+          <source>Create a F# console application project in the current directory:</source>
+          <target state="translated">Создайте проект консольного приложения F# в текущем каталоге:</target>       </trans-unit>
+        <trans-unit id="147" translate="yes" xml:space="preserve">
+          <source>Create a new ASP.NET Core C# MVC application project in the current directory with no authentication targeting .NET Core 1.0:</source>
+          <target state="translated">Создайте проект приложения ASP.NET Core C# MVC в текущем каталоге без проверки подлинности для .NET Core 1.0:</target>       </trans-unit>
+        <trans-unit id="148" translate="yes" xml:space="preserve">
+          <source>Create a new XUnit application targeting .NET Core 1.1:</source>
+          <target state="translated">Создайте приложение XUnit, предназначенное для .NET Core 1.1:</target>       </trans-unit>
+        <trans-unit id="149" translate="yes" xml:space="preserve">
+          <source>List all templates available for MVC:</source>
+          <target state="translated">Перечислите все шаблоны, доступные для MVC:</target>       </trans-unit>
       </group>
     </body>
   </file>
