--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-test.d58129290333b8aabfd5bbc2a91804817be26067.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet-test.d58129290333b8aabfd5bbc2a91804817be26067.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">fb4627f5f8754ff3432d92e20dff2684a92fbeb5</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">204ebdb5a945dcd0c9277f1d95c113e829303b32</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-test.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8b553b123ee2420e31d410f84ed417a7bc8d0aa2</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">aeb4f94f532d36df8a46310eb50d7f9108f06daf</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">cb5c5822002338292146ec0a7acc9c579416517b</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ce02cea721ed7dfc4900561e3181025f678019bf</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-test, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-test, CLI, команда CLI, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-test (Tooling Preview 4)</source>
-          <target state="translated">dotnet-test (предварительная версия 4 инструментов)</target>       </trans-unit>
+          <source>dotnet-test (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-test (версия-кандидат 4 средств .NET Core)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">Эта статья применима к версии-кандидату 4 средств .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-test<ept id="p1">](../../tools/dotnet-test.md)</ept> topic.</source>
           <target state="translated">Версия этой статьи об инструментах .NET Core (предварительная версия 2): <bpt id="p1">[</bpt>dotnet-test<ept id="p1">](../../tools/dotnet-test.md)</ept>.</target>       </trans-unit>
@@ -58,69 +58,78 @@
           <source>This is specified using an ordinary <ph id="ph1">`&lt;PackageReference&gt;`</ph> element, as seen in the following sample project file:</source>
           <target state="translated">Для этого используется обычный элемент <ph id="ph1">`&lt;PackageReference&gt;`</ph>, как показано в следующем образце файла проекта:</target>       </trans-unit>
         <trans-unit id="116" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">[!code-xml</bpt><bpt id="p2">[</bpt>XUnit Basic Template<ept id="p2">](../../../../samples/snippets/csharp/xunit-test/xunit-test.csproj)</ept><ept id="p1">]</ept></source>
+          <target state="translated"><bpt id="p1">[!code-xml</bpt><bpt id="p2">[</bpt>Базовый шаблон XUnit<ept id="p2">](../../../../samples/snippets/csharp/xunit-test/xunit-test.csproj)</ept><ept id="p1">]</ept></target>       </trans-unit>
+        <trans-unit id="117" translate="yes" xml:space="preserve">
           <source>Options</source>
           <target state="translated">Параметры</target>       </trans-unit>
-        <trans-unit id="117" translate="yes" xml:space="preserve">
+        <trans-unit id="118" translate="yes" xml:space="preserve">
           <source>Specifies a path to the test project.</source>
           <target state="translated">Указывает путь к тестовому проекту.</target>       </trans-unit>
-        <trans-unit id="118" translate="yes" xml:space="preserve">
+        <trans-unit id="119" translate="yes" xml:space="preserve">
           <source>If omitted, it defaults to current directory.</source>
           <target state="translated">Если значение не задано, по умолчанию используется текущий каталог.</target>       </trans-unit>
-        <trans-unit id="119" translate="yes" xml:space="preserve">
+        <trans-unit id="120" translate="yes" xml:space="preserve">
           <source>Prints out a short help for the command.</source>
           <target state="translated">Выводит краткую справку по команде.</target>       </trans-unit>
-        <trans-unit id="120" translate="yes" xml:space="preserve">
+        <trans-unit id="121" translate="yes" xml:space="preserve">
           <source>Settings to use when running tests.</source>
           <target state="translated">Параметры, используемые при выполнении тестов.</target>       </trans-unit>
-        <trans-unit id="121" translate="yes" xml:space="preserve">
+        <trans-unit id="122" translate="yes" xml:space="preserve">
           <source>List all of the discovered tests in the current project.</source>
           <target state="translated">Отображение списка всех обнаруженных тестов в текущем проекте.</target>       </trans-unit>
-        <trans-unit id="122" translate="yes" xml:space="preserve">
-          <source>Filter out tests in the current project using the given expression.</source>
-          <target state="translated">Фильтрация тестов в текущем проекте с помощью заданного выражения.</target>       </trans-unit>
         <trans-unit id="123" translate="yes" xml:space="preserve">
-          <source>Use the custom test adapters from the specified path in this test run.</source>
-          <target state="translated">Использование адаптеров пользовательского теста из указанного пути в ходе этого теста.</target>       </trans-unit>
+          <source>Filters out tests in the current project using the given expression.</source>
+          <target state="translated">Фильтрует тесты в текущем проекте с помощью заданного выражения.</target>       </trans-unit>
         <trans-unit id="124" translate="yes" xml:space="preserve">
-          <source>Specify a logger for test results.</source>
-          <target state="translated">Укажите средство ведения журнала результатов тестирования.</target>       </trans-unit>
+          <source>For more information on filtering support, see <bpt id="p1">[</bpt>Running selective unit tests in Visual Studio using TestCaseFilter<ept id="p1">](https://aka.ms/vstest-filtering)</ept>.</source>
+          <target state="translated">Дополнительные сведения о поддержке фильтрации см. в разделе <bpt id="p1">[</bpt>Запуск выборочных модульных тестов в Visual Studio с помощью TestCaseFilter<ept id="p1">](https://aka.ms/vstest-filtering)</ept>.</target>       </trans-unit>
         <trans-unit id="125" translate="yes" xml:space="preserve">
+          <source>Use the custom test adapters from the specified path in the test run.</source>
+          <target state="translated">Используйте пользовательские адаптеры теста из указанного пути в тестовом запуске.</target>       </trans-unit>
+        <trans-unit id="126" translate="yes" xml:space="preserve">
+          <source>Specifies a logger for test results.</source>
+          <target state="translated">Указывает средство ведения журнала для результатов тестирования.</target>       </trans-unit>
+        <trans-unit id="127" translate="yes" xml:space="preserve">
           <source>Configuration under which to build.</source>
           <target state="translated">Конфигурация для сборки.</target>       </trans-unit>
-        <trans-unit id="126" translate="yes" xml:space="preserve">
-          <source>The default value is <ph id="ph1">`Release`</ph>.</source>
-          <target state="translated">Значение по умолчанию — <ph id="ph1">`Release`</ph>.</target>       </trans-unit>
-        <trans-unit id="127" translate="yes" xml:space="preserve">
-          <source>Directory in which to find the binaries to run.</source>
-          <target state="translated">Каталог, в котором выполняется поиск двоичных файлов для выполнения.</target>       </trans-unit>
         <trans-unit id="128" translate="yes" xml:space="preserve">
+          <source>The default value is <ph id="ph1">`Debug`</ph> but your project's configuration could override this default SDK setting.</source>
+          <target state="translated">Значение по умолчанию — <ph id="ph1">`Debug`</ph>, но конфигурация проекта может переопределить параметр SDK по умолчанию.</target>       </trans-unit>
+        <trans-unit id="129" translate="yes" xml:space="preserve">
           <source>Looks for test binaries for a specific framework.</source>
           <target state="translated">Поиск тестовых двоичных файлов для определенной платформы.</target>       </trans-unit>
-        <trans-unit id="129" translate="yes" xml:space="preserve">
-          <source>Look for test binaries for a for the specified runtime.</source>
-          <target state="translated">Поиск тестовых двоичных файлов для указанной среды выполнения.</target>       </trans-unit>
         <trans-unit id="130" translate="yes" xml:space="preserve">
+          <source>Directory in which to find the binaries to run.</source>
+          <target state="translated">Каталог, в котором выполняется поиск двоичных файлов для выполнения.</target>       </trans-unit>
+        <trans-unit id="131" translate="yes" xml:space="preserve">
+          <source>Enables diagnostic mode for the test platform and write diagnostic messages to the specified file.</source>
+          <target state="translated">Включает режим диагностики для платформы тестирования и записывает диагностические сообщения в указанный файл.</target>       </trans-unit>
+        <trans-unit id="132" translate="yes" xml:space="preserve">
           <source>Does not build the test project prior to running it.</source>
           <target state="translated">Не выполняет сборку тестового проекта перед его запуском.</target>       </trans-unit>
-        <trans-unit id="131" translate="yes" xml:space="preserve">
-          <source>Enable diagnostic mode for the test platform and write diagnostic messages to the specified file.</source>
-          <target state="translated">Включение режима диагностики для платформы тестирования и запись диагностических сообщений в указанный файл.</target>       </trans-unit>
-        <trans-unit id="132" translate="yes" xml:space="preserve">
+        <trans-unit id="133" translate="yes" xml:space="preserve">
+          <source>Set the verbosity level of the command.</source>
+          <target state="translated">Задайте уровень детализации команды.</target>       </trans-unit>
+        <trans-unit id="134" translate="yes" xml:space="preserve">
+          <source>You can specify the following verbosity levels: q[uiet], m[inimal], n[ormal], d[etailed], and diag[nostic].</source>
+          <target state="translated">Можно указать следующие уровни детализации: q[uiet], m[inimal], n[ormal], d[etailed] и diag[nostic].</target>       </trans-unit>
+        <trans-unit id="135" translate="yes" xml:space="preserve">
           <source>Examples</source>
           <target state="translated">Примеры</target>       </trans-unit>
-        <trans-unit id="133" translate="yes" xml:space="preserve">
+        <trans-unit id="136" translate="yes" xml:space="preserve">
           <source>Run the tests in the project in the current directory:</source>
           <target state="translated">Выполнение тестов в проекте в текущем каталоге:</target>       </trans-unit>
-        <trans-unit id="134" translate="yes" xml:space="preserve">
+        <trans-unit id="137" translate="yes" xml:space="preserve">
           <source>Run the tests in the test1 project:</source>
           <target state="translated">Выполнение тестов в проекте test1:</target>       </trans-unit>
-        <trans-unit id="135" translate="yes" xml:space="preserve">
+        <trans-unit id="138" translate="yes" xml:space="preserve">
           <source>See also</source>
           <target state="translated">См. также</target>       </trans-unit>
-        <trans-unit id="136" translate="yes" xml:space="preserve">
+        <trans-unit id="139" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>Frameworks<ept id="p1">](../../../standard/frameworks.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>Платформы<ept id="p1">](../../../standard/frameworks.md)</ept></target>       </trans-unit>
-        <trans-unit id="137" translate="yes" xml:space="preserve">
+        <trans-unit id="140" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>Runtime IDentifier (RID) catalog<ept id="p1">](../../rid-catalog.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>Каталог идентификаторов сред выполнения (RID)<ept id="p1">](../../rid-catalog.md)</ept></target>       </trans-unit>
       </group>
