--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet.9b94b9183f41bc72bf2612cb95e9088edd32db8c.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/dotnet.9b94b9183f41bc72bf2612cb95e9088edd32db8c.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b88f9fb2e5be34c0a4f50cda7d66bbe8bf18de6d</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a6a4bc5dad16bb1455fd8f7bc6a5c3609a06b88a</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\dotnet.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7b2f4511957d201a039b53bc146c2cbffe0ca544</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e4b50d5812eb3ebe0a54ffb1bf9ab617d23a3a03</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1e2da36dd00ead3baaba13263447cad1e241ddb0</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">88898b28e7c1c7d6dfacd1e0d41fc0e49f59d2b0</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 2).</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>dotnet command (Tooling Preview 4)<ept id="p1">](../preview3/tools/dotnet.md)</ept> topic.</source>
-          <target state="translated">Информацию об инструментах .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017 см. в статье <bpt id="p1">[</bpt>Команда dotnet (предварительная версия 4 инструментов)<ept id="p1">](../preview3/tools/dotnet.md)</ept>.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>dotnet command (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/dotnet.md)</ept> topic.</source>
+          <target state="translated">Сведения для версии-кандидата 4 средств .NET Core см. в разделе <bpt id="p1">[</bpt>Команда dotnet (версия-кандидат 4 средств .NET Core)<ept id="p1">](../preview3/tools/dotnet.md)</ept>.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Name</source>
           <target state="translated">Имя</target>       </trans-unit>
