--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/global-json.c6a5a164f40aa25301eee0114f5f18eb89ccd343.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/global-json.c6a5a164f40aa25301eee0114f5f18eb89ccd343.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">97a9ee85025c15e21d4a7cbdce31d35d3894e7d6</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b814bfc79c2fcd0fd15b9494c18c6d0443a70fb1</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\global-json.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">66aa560d3aab6f3d378786fee7af6502278cc189</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">79b94137aaaa6c0fcdc75da9e51a339695f0074c</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2dd29fd87727def5256e4586153e506ae638de70</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2589e1da6f1854861a01920f95bbb2a8df57d384</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,17 +22,17 @@
           <source>.NET, .NET Core</source>
           <target state="translated">.NET, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>global.json reference (Tooling Preview 4)</source>
-          <target state="translated">Справочник по файлу global.json (предварительная версия 4 инструментов)</target>       </trans-unit>
+          <source>global.json reference (.NET Core Tools RC4)</source>
+          <target state="translated">Справочник по global.json (версия-кандидат 4 средств .NET Core)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">Эта статья применима к версии-кандидату 4 средств .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>global.json reference<ept id="p1">](../../tools/global-json.md)</ept> topic.</source>
           <target state="translated">Версия этой статьи об инструментах .NET Core (предварительная версия 2): <bpt id="p1">[</bpt>Справочник по файлу global.json<ept id="p1">](../../tools/global-json.md)</ept>.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
-          <source>The global.json file is still present in the .NET Core Command Line Preview 4.</source>
-          <target state="translated">Файл global.json по-прежнему присутствует в командной строке .NET Core (предварительная версия 4).</target>       </trans-unit>
+          <source>The global.json file is still present in the .NET Core Command Line RC4.</source>
+          <target state="translated">Файл global.json по-прежнему присутствует в версии-кандидате 4 командной строки .NET Core.</target>       </trans-unit>
         <trans-unit id="108" translate="yes" xml:space="preserve">
           <source>However, its main purpose is not to define solution metadata as in previous releases, but to allow selection of the CLI version being used through the <ph id="ph1">`sdk`</ph> property.</source>
           <target state="translated">При этом он используется не для определения метаданных решения, как в предыдущих выпусках, а для разрешения выбора используемой версии CLI с помощью свойства <ph id="ph1">`sdk`</ph>.</target>       </trans-unit>
