--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/using-on-windows-vs-2017-full-solution.530f4b841a56f2f4e5e921ec0c3d4f9a94a47ece.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/using-on-windows-vs-2017-full-solution.530f4b841a56f2f4e5e921ec0c3d4f9a94a47ece.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-71050dc" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">02c48cd7e2fc551b82bb7afa53a3dd228e02dca1</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">04f5264eaaa16be299e0d72f587ee232a5e61ca9</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tutorials\using-on-windows-vs-2017-full-solution.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">44e2182ca54f1059624de644a8baf01f08b52212</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6ca080e8e237db36659b3126e7976901ffd2f084</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ca3dfabc0202886544007b80f97e5267ae5f1c77</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5c60fc66c013cba2ce80176c0b3a23f9a21f6062</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>.NET, .NET Core</source>
           <target state="translated">.NET, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>Building a complete .NET Core solution on Windows, using Visual Studio 2017 (Tooling Preview 4)</source>
-          <target state="translated">Создание полного решения на .NET Core в Windows при помощи Visual Studio 2017 (предварительная версия 4 инструментов)</target>       </trans-unit>
+          <source>Building a complete .NET Core solution on Windows, using Visual Studio 2017 (.NET Core Tools RC4)</source>
+          <target state="translated">Создание полного решения .NET Core в Windows с помощью Visual Studio 2017 (версия-кандидат 4 средств .NET Core)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">Эта статья применима к версии-кандидату 4 средств .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>Getting started with .NET Core on Windows, using Visual Studio 2015<ept id="p1">](../../tutorials/using-on-windows.md)</ept> topic.</source>
           <target state="translated">Версия этой статьи об инструментах .NET Core (предварительная версия 2): <bpt id="p1">[</bpt>Начало работы с .NET Core в Windows с помощью Visual Studio 2015<ept id="p1">](../../tutorials/using-on-windows.md)</ept>.</target>       </trans-unit>
