--- a/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/using-on-windows-vs-2017.9435fc5adf06f6b3fb28f32b3d3c3f5df162a2ac.ru-ru.xlf
+++ b/ol-archive/dotnet/docs.ru-ru/master/dotnet-core/using-on-windows-vs-2017.9435fc5adf06f6b3fb28f32b3d3c3f5df162a2ac.ru-ru.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ru-ru">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e40ee8ff1d1aa26689d0c2730a417162e5a9b447</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">cc2c2853bc31e161d1fe0de4edc71d15281c6d24</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tutorials\using-on-windows-vs-2017.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b9dbf66d3e86c2217fb100471d834c70dc358207</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">fea76c696040fd685079d9f5153746afbdb76178</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">92b0b59ec2b98903d6fdbee17ca6f7559d1df808</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b253648576c4536dcf3cb4234542258af6f52a81</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>.NET, .NET Core</source>
           <target state="translated">.NET, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>Getting started with .NET Core on Windows, using Visual Studio 2017 (Tooling Preview 4)</source>
-          <target state="translated">Приступая к работе с .NET Core в Windows при помощи Visual Studio 2017 (предварительная версия 4 инструментов)</target>       </trans-unit>
+          <source>Getting started with .NET Core on Windows, using Visual Studio 2017 (.NET Core Tools RC4)</source>
+          <target state="translated">Начало работы с .NET Core в Windows с помощью Visual Studio 2017 (версия-кандидат 4 средств .NET Core)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">Эта статья применима к инструментам .NET Core (предварительная версия 4) для версии-кандидата Visual Studio 2017.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">Эта статья применима к версии-кандидату 4 средств .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the Visual Studio 2015 - .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>Getting started with .NET Core on Windows, using Visual Studio 2015<ept id="p1">](../../tutorials/using-on-windows.md)</ept> topic.</source>
           <target state="translated">Информацию об инструментах .NET Core (предварительная версия 2) для Visual Studio 2015 см. в статье <bpt id="p1">[</bpt>Начало работы с .NET Core в Windows с помощью Visual Studio 2015<ept id="p1">](../../tutorials/using-on-windows.md)</ept>.</target>       </trans-unit>
